# llm-inference-queueing

./: .gitignore  README.md  pyproject.toml
analysis/: make_plots.py  validate.py
experiments/: run_experiments.py
live/: capture_traces.py  concurrency_sweep.py  fit_coefficients.py  replay_workload.py
paper/: blog-post.md  queueing-the-transformer.tex
profiles/: m3pro-ollama-qwen2.5-3b.json  modal-l4-vllm-qwen2.5-7b.json
results/: summary.csv  validation.json  validation_overhead-ablation.json
results/example-run/: run.json  traces.jsonl
results/l4-conc/: run.json  traces.jsonl
results/l4-prefill/: run.json  traces.jsonl
results/live-m3pro-qwen3b/: run.json  traces.jsonl
results/replay-high/: run.json  traces.jsonl
results/replay-low/: run.json  traces.jsonl
serving/: vllm_modal.py
simulator/: __init__.py  engine.py  metrics.py  request.py  server.py  traces.py  workloads.py
tests/: test_engine.py
