[project]
name = "llm-inference-queueing"
version = "0.1.0"
description = "Discrete-event simulator for LLM inference serving: batching, scheduling, and tail latency"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "httpx>=0.27",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simulator", "live"]
